--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import url( 'https://fonts.googleapis.com/css?family=Roboto:400,700|Material+Icons');
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+html, body{
+    height: 100%;
+    margin: 0!important;
+}
