--- a/src/app/notes-list/note-list.component.html
+++ b/src/app/notes-list/note-list.component.html
@@ -1,3 +1,8 @@
+<div class="add-note-panel">
+  <a mat-button [routerLink]="['/add']">
+    <mat-icon>add</mat-icon>Add New Note
+  </a>
+</div>
 <mat-accordion>
   <mat-expansion-panel *ngFor="let note of notes;">
     <mat-expansion-panel-header>
@@ -11,6 +16,11 @@
     </mat-expansion-panel-header>
     <div class="note-body">
       {{note.body}}
+    </div>
+    <div class="note-delete">
+      <button mat-button (click)="noteDeleteClicked(note);">
+        <mat-icon>delete</mat-icon> Delete
+      </button>
     </div>
   </mat-expansion-panel>
 </mat-accordion>
